examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E300: function-type return mismatch should report return-specific diagnostics.
fn ret_int() -> Int {
    1
}

fn ret_string() -> String {
    "x"
}

fn main() -> Unit {
    let _f = if true {
        ret_int
    } else {
        ret_string
    }
}
